--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="index.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="div1"> </div>
+    <div class="content"> </div>
+    
 </body>
 </html>
