--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="0941b060d4e78dd8e877.js"></script>
     <title>Document</title>
 <script defer src="main.js"></script></head>
 <body>
-    <div class="content"> </div>
+    <div id="content"> </div>
     
 </body>
 </html>
